# tipsy_tools

./: Makefile  README.md  ascii2bin.c  ascii2std.c  bin2ascii.c  bin2genga.c  bin2simple.c  checkmass.c  hrwh2std.c  readstarlog.c  simple2bin.c  snap2tipsy.c  snapshot.c  starlog2mform.c  std2ascii.c  tipsy2hrwh.c  tipsy2snap.c  tipsydefs.h  totipnat.c  totipstd.c  treebi2snap.c  trimstd.c
IDL/: rtipsy.pro
SGI/: Makefile
SUN/: Makefile
beta/: adg2bin.c  bin2adg.c  hughdefs.h  makefile  pinfo.h
tipsy2gadget/siman/: AUTHORS  COPYRIGHT  ChangeLog  Doxyfile  Jamfile  Jamroot  Jamrules  Makefile.am  Makefile.in  README  READMEfirst  TODO  base.hpp  configure  configure.in  extra.hpp  simanrules.jam  visual.hpp
tipsy2gadget/siman/base/: Jamfile  Makefile.am  Makefile.in  annotate.cpp  annotate.hpp  basesimsnap.cpp  basesimsnap.hpp  colourmap.cpp  colourmap.hpp  columngrid.cpp  columngrid.hpp  columnlist.cpp  columnlist.hpp  config.cpp  config.hpp  constants.hpp  coordinate.hpp  endian.cpp  endian.hpp  filter.cpp  filter.hpp  gadgetfile.cpp  gadgetfile.hpp  gadgetsnap.cpp  gadgetsnap.hpp  geometry.cpp  geometry.hpp  glew.c  glutinterface.cpp  glutinterface.hpp  glutinterfaceautomated.cpp  glutinterfaceautomated.hpp  grid.cpp  grid.hpp  h1h3.h  metric.cpp  metric.hpp  particle.cpp  particle.hpp  quickinclude.hpp  (+37 more)
tipsy2gadget/siman/data/: LUM_B  LUM_I  LUM_K  LUM_R  LUM_V  UVNORM  UVNORM-NO-QSO  config
tipsy2gadget/siman/data/LUM_source_kroupa/: makelumfiles.py  sb99_z0.0004  sb99_z0.008  sb99_z0.050
tipsy2gadget/siman/data/LUM_source_salpeter/: LUM_B  LUM_I  LUM_K  LUM_R  LUM_V  sb99_z0.0004  sb99_z0.008  sb99_z0.020  sb99_z0.050
tipsy2gadget/siman/data/shaders/: fshade_splatting  fshade_vectors  vshade_pixels  vshade_splatting  vshade_vectors
tipsy2gadget/siman/extra/: Jamfile  Makefile.am  Makefile.in  foffile.cpp  foffile.hpp  grpfile.cpp  grpfile.hpp  ionise.cpp  ionise.hpp  subsets.cpp  subsets.hpp
tipsy2gadget/siman/progs/: Jamfile  Makefile.am  Makefile.in  convsim.cpp  dumphalo.cpp  glancesim.cpp  ionise_test.cpp  makeabs.cpp  siman.cpp  test.cpp  vishalo.cpp  visiman.cpp
tipsy2gadget/siman/python/: Jamfile  Jamrules  python.cpp  python_definitions.hpp
tipsy2gadget/siman/python/scitbx/: COPYRIGHT  container_conversions.h
tipsy2gadget/siman/visual/: Makefile.am  Makefile.in  colourmap.cpp  colourmap.hpp  visualise.cpp  visualise.hpp
