
# Process this file with autoconf to produce a configure script.

AC_INIT([siman], [0.1], [apontzen@ast.cam.ac.uk], [siman])
AM_INIT_AUTOMAKE
AC_PREREQ([2.56])
AC_CONFIG_SRCDIR([AUTHORS])

# Compatibility hack for older autoconf versions
m4_ifdef([AS_HELP_STRING], [], [AC_DEFUN([AS_HELP_STRING], [AC_HELP_STRING($][@)])])

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_C_CONST
AC_EXEEXT
AC_LIBTOOL_DLOPEN
AC_PROG_LIBTOOL
AC_SUBST([LIBTOOL_DEPS])

# Checks for libraries.
AC_PATH_XTRA
AC_CHECK_LIB(glut,main,[ AC_DEFINE(SIMAN_VIS) EXTRALIBS="$EXTRALIBS -lglut" ])
AC_CHECK_LIB(CCfits,main,[ AC_DEFINE(SIMAN_FITS) EXTRALIBS="$EXTRALIBS -lCCfits" ])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([GL/gl.h GL/glu.h GL/glx.h GL/freeglut.h])
AC_HEADER_TIME

save_CFLAGS="$CFLAGS"
CFLAGS="$CFLAGS $X_CFLAGS"
LIBS="$LIBS $EXTRALIBS"
AC_CHECK_HEADERS([X11/extensions/xf86vmode.h], [], [], [#include <X11/Xlib.h>])
CFLAGS="$save_CFLAGS"

# Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_VPRINTF
AC_CHECK_LIBM
AC_SUBST([LIBM])


# Generate output.
AC_CONFIG_FILES([Makefile
                 base/Makefile
                 visual/Makefile
                 extra/Makefile
                 progs/Makefile])
AC_OUTPUT
