
# Process this file with autoconf to produce a configure script.

AC_INIT([siman], [0.1], [apontzen@ast.cam.ac.uk], [siman])
AM_INIT_AUTOMAKE
AC_PREREQ([2.56])
AC_CONFIG_SRCDIR([AUTHORS])

# Compatibility hack for older autoconf versions
m4_ifdef([AS_HELP_STRING], [], [AC_DEFUN([AS_HELP_STRING], [AC_HELP_STRING($][@)])])

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB
AC_C_CONST
AC_EXEEXT

# Checks for libraries.
AC_PATH_XTRA

# Checks for header files.
AC_HEADER_STDC
AC_HEADER_TIME

save_CFLAGS="$CFLAGS"
CFLAGS="$CFLAGS $X_CFLAGS"
LIBS="$LIBS $EXTRALIBS"
CFLAGS="$save_CFLAGS"

# Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_VPRINTF
AC_CHECK_LIBM
AC_SUBST([LIBM])


# Generate output.
AC_CONFIG_FILES([Makefile
                 base/Makefile
                 extra/Makefile
                 progs/Makefile])
AC_OUTPUT
