INCLUDES = -I../../
bin_PROGRAMS = dumphalo glancesim ionisetest makeabs siman testsim convsim
LDADD = ../base/libsiman.a ../extra/libsimanextra.a



dumphalo_SOURCES=dumphalo.cpp
glancesim_SOURCES=glancesim.cpp
ionisetest_SOURCES=ionise_test.cpp
convsim_SOURCES=convsim.cpp

makeabs_SOURCES=makeabs.cpp


siman_SOURCES=siman.cpp
testsim_SOURCES=test.cpp

